API spec for template owner-account creation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,9 @@ quarkus.http.port=8080
 quarkus.http.root-path=${COTEMPLATE_PATH:}
 
 quarkus.http.auth.form.enabled=true
+quarkus.http.auth.form.post-location=/auth/login
+quarkus.http.auth.form.username-parameter=username
+quarkus.http.auth.form.password-parameter=password
 quarkus.http.auth.form.cookie-path=${COTEMPLATE_PATH:/}
 quarkus.http.auth.form.cookie-max-age=P2D
 quarkus.http.auth.form.cookie-same-site=strict
@@ -17,8 +20,6 @@ quarkus.hibernate-orm.schema-management.strategy=update
 
 quarkus.quinoa.dev-server.port=8081
 quarkus.quinoa.dev-server.build-dir: dist
-
-greeting.message: "hello"
 
 %prod.quarkus.datasource.db-kind=postgresql
 %prod.quarkus.datasource.username=${COTEMPLATE_DB_USER}
