API spec for template creation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,7 @@ quarkus.http.auth.form.error-page=
 quarkus.http.auth.session.encryption-key=${COTEMPLATE_SESSION_KEY}
 
 quarkus.hibernate-orm.schema-management.strategy=update
+quarkus.hibernate-orm.physical-naming-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategySnakeCaseImpl
 
 quarkus.quinoa.dev-server.port=8081
 quarkus.quinoa.dev-server.build-dir: dist
