impl template image items management

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,9 @@ quarkus.devservices.enabled=false
 quarkus.http.port=8080
 quarkus.http.root-path=${COTEMPLATE_PATH:}
 
+quarkus.http.limits.max-form-attribute-size=10M
+quarkus.http.body.delete-uploaded-files-on-end=true
+
 quarkus.http.auth.form.enabled=true
 quarkus.http.auth.form.post-location=/auth/login
 quarkus.http.auth.form.username-parameter=username
@@ -21,6 +24,8 @@ quarkus.hibernate-orm.physical-naming-strategy=org.hibernate.boot.model.naming.P
 
 quarkus.quinoa.dev-server.port=8081
 quarkus.quinoa.dev-server.build-dir: dist
+
+cotemplate.image-storage=${COTEMPLATE_IMG_STOARGE}
 
 %prod.quarkus.datasource.db-kind=postgresql
 %prod.quarkus.datasource.username=${COTEMPLATE_DB_USER}
