caching for rendered templates

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,6 +27,9 @@ quarkus.quinoa.dev-server.build-dir: dist
 
 cotemplate.image-storage=${COTEMPLATE_IMG_STOARGE}
 
+quarkus.cache.caffeine.template-rendered.maximum-size=${COTEMPLATE_CAHCHE_TEMPLATE_MAX_ENTRIES:128}
+quarkus.cache.caffeine.template-rendered.expire-after-access=${COTEMPLATE_CAHCHE_TEMPLATE_MAX_AGE:1h}
+
 %prod.quarkus.datasource.db-kind=postgresql
 %prod.quarkus.datasource.username=${COTEMPLATE_DB_USER}
 %prod.quarkus.datasource.password=${COTEMPLATE_DB_PASS}
