add eviction of old templates

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,6 +26,7 @@ quarkus.quinoa.dev-server.port=8081
 quarkus.quinoa.dev-server.build-dir: dist
 
 cotemplate.image-storage=${COTEMPLATE_IMG_STOARGE}
+cotemplate.template-max-age=${COTEMPLATE_MAX_AGE:2m}
 
 quarkus.cache.caffeine.template-rendered.maximum-size=${COTEMPLATE_CAHCHE_TEMPLATE_MAX_ENTRIES:128}
 quarkus.cache.caffeine.template-rendered.expire-after-access=${COTEMPLATE_CAHCHE_TEMPLATE_MAX_AGE:1h}
