add '/api' prefix to api endpoints + refactor test cleanups

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ quarkus.http.limits.max-form-attribute-size=10M
 quarkus.http.body.delete-uploaded-files-on-end=true
 
 quarkus.http.auth.form.enabled=true
-quarkus.http.auth.form.post-location=/auth/login
+quarkus.http.auth.form.post-location=/api/auth/login
 quarkus.http.auth.form.username-parameter=username
 quarkus.http.auth.form.password-parameter=password
 quarkus.http.auth.form.cookie-path=${COTEMPLATE_PATH:/}
@@ -25,7 +25,7 @@ quarkus.hibernate-orm.physical-naming-strategy=org.hibernate.boot.model.naming.P
 quarkus.quinoa.dev-server.port=8081
 quarkus.quinoa.dev-server.build-dir: dist
 
-cotemplate.image-storage=${COTEMPLATE_IMG_STOARGE}
+cotemplate.image-storage=${COTEMPLATE_IMG_STORAGE}
 cotemplate.template-max-age=${COTEMPLATE_MAX_AGE:2m}
 
 quarkus.cache.caffeine.template-rendered.maximum-size=${COTEMPLATE_CAHCHE_TEMPLATE_MAX_ENTRIES:128}
