teams + auth + biiiiig refactoring

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,7 @@ quarkus.http.auth.session.encryption-key=${COTEMPLATE_SESSION_KEY}
 
 quarkus.hibernate-orm.schema-management.strategy=update
 quarkus.hibernate-orm.physical-naming-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategySnakeCaseImpl
+#quarkus.hibernate-orm.log.sql=true
 
 quarkus.quinoa.dev-server.port=8081
 quarkus.quinoa.dev-server.build-dir: dist
