--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,6 @@
 # Gradle properties
+
+# Gradle properties
 quarkusPluginId=io.quarkus
 quarkusPluginVersion=3.24.5
 quarkusPlatformGroupId=io.quarkus.platform
