--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,8 +23,9 @@ quarkus.hibernate-orm.schema-management.strategy=update
 quarkus.hibernate-orm.physical-naming-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategySnakeCaseImpl
 #quarkus.hibernate-orm.log.sql=true
 
-quarkus.quinoa.dev-server.port=8081
-quarkus.quinoa.dev-server.build-dir: dist
+quarkus.quinoa.build-dir=build
+quarkus.quinoa.enable-spa-routing=true
+quarkus.quinoa.ui-root-path=/ui
 
 cotemplate.image-storage=${COTEMPLATE_IMG_STORAGE}
 cotemplate.template-max-age=${COTEMPLATE_MAX_AGE:2m}
@@ -32,10 +33,10 @@ cotemplate.template-max-age=${COTEMPLATE_MAX_AGE:2m}
 quarkus.cache.caffeine.template-rendered.maximum-size=${COTEMPLATE_CAHCHE_TEMPLATE_MAX_ENTRIES:128}
 quarkus.cache.caffeine.template-rendered.expire-after-access=${COTEMPLATE_CAHCHE_TEMPLATE_MAX_AGE:1h}
 
-%prod.quarkus.datasource.db-kind=postgresql
-%prod.quarkus.datasource.username=${COTEMPLATE_DB_USER}
-%prod.quarkus.datasource.password=${COTEMPLATE_DB_PASS}
-%prod.quarkus.datasource.jdbc.url=jdbc:postgresql://${COTEMPLATE_DB_HOST}:${COTEMPLATE_DB_PORT:5432}/${COTEMPLATE_DB_NAME}
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.username=${COTEMPLATE_DB_USER}
+quarkus.datasource.password=${COTEMPLATE_DB_PASS}
+quarkus.datasource.jdbc.url=jdbc:postgresql://${COTEMPLATE_DB_HOST}:${COTEMPLATE_DB_PORT:5432}/${COTEMPLATE_DB_NAME}
 
 %test.quarkus.datasource.db-kind=h2
 %test.quarkus.datasource.username=sa
