document API + generate request code for frontend

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,6 +27,12 @@ quarkus.quinoa.build-dir=build
 quarkus.quinoa.enable-spa-routing=true
 quarkus.quinoa.ui-root-path=/ui
 
+quarkus.smallrye-openapi.info-title=Cotemplate
+quarkus.smallrye-openapi.info-version=0.1.0
+quarkus.smallrye-openapi.info-description=API of Cotemplate, a collaborative template arrangement tool
+quarkus.smallrye-openapi.info-license-name=AGPL 3
+quarkus.smallrye-openapi.info-license-url=https://www.gnu.org/licenses/agpl-3.0.en.html
+
 cotemplate.image-storage=${COTEMPLATE_IMG_STORAGE}
 cotemplate.template-max-age=${COTEMPLATE_MAX_AGE:2m}
 
