backend: add 'logout' endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 quarkus.devservices.enabled=false
 
+#quarkus.hibernate-orm.log.sql=true
+#quarkus.http.access-log.enabled=true
+
 quarkus.http.port=8080
 quarkus.http.root-path=${COTEMPLATE_PATH:}
 
@@ -10,6 +13,7 @@ quarkus.http.auth.form.enabled=true
 quarkus.http.auth.form.post-location=/api/auth/login
 quarkus.http.auth.form.username-parameter=username
 quarkus.http.auth.form.password-parameter=password
+quarkus.http.auth.form.cookie-name=quarkus-credential
 quarkus.http.auth.form.cookie-path=${COTEMPLATE_PATH:/}
 quarkus.http.auth.form.cookie-max-age=P2D
 quarkus.http.auth.form.cookie-same-site=strict
@@ -21,7 +25,6 @@ quarkus.http.auth.session.encryption-key=${COTEMPLATE_SESSION_KEY}
 
 quarkus.hibernate-orm.schema-management.strategy=update
 quarkus.hibernate-orm.physical-naming-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategySnakeCaseImpl
-#quarkus.hibernate-orm.log.sql=true
 
 quarkus.quinoa.build-dir=build
 quarkus.quinoa.enable-spa-routing=true
