--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,7 +37,8 @@ quarkus.smallrye-openapi.info-license-name=AGPL 3
 quarkus.smallrye-openapi.info-license-url=https://www.gnu.org/licenses/agpl-3.0.en.html
 
 cotemplate.image-storage=${COTEMPLATE_IMG_STORAGE}
-cotemplate.template-max-age=${COTEMPLATE_MAX_AGE:2m}
+# see https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-
+cotemplate.template-max-age=${COTEMPLATE_MAX_AGE:P62D}
 
 quarkus.cache.caffeine.template-rendered.maximum-size=${COTEMPLATE_CAHCHE_TEMPLATE_MAX_ENTRIES:128}
 quarkus.cache.caffeine.template-rendered.expire-after-access=${COTEMPLATE_CAHCHE_TEMPLATE_MAX_AGE:1h}
