backend + UI: admin account + templates overview for admin

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,6 +39,7 @@ quarkus.smallrye-openapi.info-license-url=https://www.gnu.org/licenses/agpl-3.0.
 cotemplate.image-storage=${COTEMPLATE_IMG_STORAGE}
 # see https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-
 cotemplate.template-max-age=${COTEMPLATE_MAX_AGE:P62D}
+cotemplate.auth.admin-password=${COTEMPLATE_ADMIN_PASS:_}
 
 quarkus.cache.caffeine.template-rendered.maximum-size=${COTEMPLATE_CAHCHE_TEMPLATE_MAX_ENTRIES:128}
 quarkus.cache.caffeine.template-rendered.expire-after-access=${COTEMPLATE_CAHCHE_TEMPLATE_MAX_AGE:1h}
