fix various path handling for deployment in subpath

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ quarkus.devservices.enabled=false
 #quarkus.http.access-log.enabled=true
 
 quarkus.http.port=8080
-quarkus.http.root-path=${COTEMPLATE_PATH:}
+%dev.quarkus.http.root-path=${COTEMPLATE_PATH}
 
 quarkus.http.limits.max-form-attribute-size=10M
 quarkus.http.body.delete-uploaded-files-on-end=true
@@ -14,7 +14,7 @@ quarkus.http.auth.form.post-location=/api/auth/login
 quarkus.http.auth.form.username-parameter=username
 quarkus.http.auth.form.password-parameter=password
 quarkus.http.auth.form.cookie-name=quarkus-credential
-quarkus.http.auth.form.cookie-path=${COTEMPLATE_PATH:/}
+quarkus.http.auth.form.cookie-path=${quarkus.http.root-path}
 quarkus.http.auth.form.cookie-max-age=P2D
 quarkus.http.auth.form.cookie-same-site=strict
 quarkus.http.auth.form.http-only-cookie=true
@@ -29,6 +29,7 @@ quarkus.hibernate-orm.physical-naming-strategy=org.hibernate.boot.model.naming.P
 quarkus.quinoa.build-dir=build
 quarkus.quinoa.enable-spa-routing=true
 quarkus.quinoa.ui-root-path=/ui
+quarkus.quinoa.package-manager-command.build-env.COTEMPLATE_UI_PATH=${quarkus.http.root-path}${quarkus.quinoa.ui-root-path}
 
 quarkus.smallrye-openapi.info-title=Cotemplate
 quarkus.smallrye-openapi.info-version=0.1.0
